<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">TV</string>
    <string name="live_pass">Pass</string>
    <string name="live_refresh">Refresh</string>
    <string name="live_line">Line <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_title"><xliff:g name="name">%s</xliff:g> : <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_site">Site: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_year">Year: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_area">Area: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_type">Type: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_director">Director: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_actor">Actor: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_content">Summary: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_desc">Summary</string>
    <string name="keep">Keep</string>
    <string name="keep_add">Added</string>
    <string name="keep_del">Removed</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="play_op">OP</string>
    <string name="play_ed">ED</string>
    <string name="play_exo">EXO</string>
    <string name="play_mpv">MPV</string>
    <string name="play_other">Other</string>
    <string name="play_next">Next</string>
    <string name="play_prev">Prev</string>
    <string name="play_stop">Stop</string>
    <string name="play_repeat">Repeat</string>
    <string name="play_forward">→</string>
    <string name="play_backward">←</string>
    <string name="play_speed">Speed</string>
    <string name="play_speed_hint">Speed <xliff:g name="speed">%1$s</xliff:g></string>
    <string name="play_reset">Reset</string>
    <string name="play_replay">Replay</string>
    <string name="play_decode">Hard</string>
    <string name="play_timer">Timer</string>
    <string name="play_edition">Title</string>
    <string name="play_chapter">Chapter</string>
    <string name="play_scale">Default</string>
    <string name="play_config">Config</string>
    <string name="play_change">Change</string>
    <string name="play_invert">Invert</string>
    <string name="play_across">Across</string>
    <string name="play_reverse">Reverse</string>
    <string name="play_track_text">Text</string>
    <string name="play_track_audio">Audio</string>
    <string name="play_track_video">Video</string>
    <string name="play_forward_hint">Normal play switched</string>
    <string name="play_backward_hint">Reverse play switched</string>
    <string name="play_ready">Ready to play: <xliff:g name="name">%s</xliff:g></string>
    <string name="play_switch_flag">Switching flag to <xliff:g name="name">%s</xliff:g></string>
    <string name="play_switch_site">Switching site to <xliff:g name="name">%s</xliff:g></string>
    <string name="play_switch_parse">Switching parse to <xliff:g name="name">%s</xliff:g></string>
    <string name="setting_tab_offset">Offset</string>
    <string name="setting_effect_basic">Basic</string>
    <string name="setting_effect_scene">Scene</string>
    <string name="setting_effect_custom">Custom</string>
    <string name="setting_preset_original">Original</string>
    <string name="speed_setting">Speed settings</string>
    <string name="speed_setting_reset">Reset</string>
    <string name="speed_setting_current">Playback speed</string>
    <string name="speed_setting_long_press">Long press speed</string>
    <string name="speed_setting_quick">Quick select</string>
    <string name="speed_setting_skip_silence">Skip silence</string>
    <string name="audio_setting">Audio settings</string>
    <string name="audio_effect_compare">Compare</string>
    <string name="audio_effect_reset">Reset</string>
    <string name="audio_effect_tab_preset">Effects</string>
    <string name="audio_effect_tab_equalizer">Adjust</string>
    <string name="audio_effect_tab_advanced">Advanced</string>
    <string name="audio_offset">Audio offset</string>
    <string name="audio_effect_category_tone">Tone</string>
    <string name="audio_effect_category_genre">Genre</string>
    <string name="audio_effect_natural">Natural</string>
    <string name="audio_effect_vocal">Vocal</string>
    <string name="audio_effect_cinema">Cinema</string>
    <string name="audio_effect_bass">Bass</string>
    <string name="audio_effect_treble">Treble</string>
    <string name="audio_effect_pop">Pop</string>
    <string name="audio_effect_rock">Rock</string>
    <string name="audio_effect_dance">Dance</string>
    <string name="audio_effect_electronic">Electro</string>
    <string name="audio_effect_hiphop">Hip-hop</string>
    <string name="audio_effect_jazz">Jazz</string>
    <string name="audio_effect_classical">Classical</string>
    <string name="audio_effect_custom">Custom</string>
    <string name="audio_effect_stability">Stable volume</string>
    <string name="audio_effect_stability_summary">Reduce volume changes within a video</string>
    <string name="audio_effect_boost">Volume boost</string>
    <string name="audio_effect_dialogue">Voice boost</string>
    <string name="audio_effect_balance">Channel balance</string>
    <string name="audio_effect_headroom">Headroom / preamp</string>
    <string name="audio_effect_loudness">Loudness balance</string>
    <string name="audio_effect_loudness_summary">Balance average volume across videos</string>
    <string name="audio_effect_center_gain">Center gain</string>
    <string name="audio_channel_mode">Channel mode</string>
    <string name="audio_channel_auto">Auto</string>
    <string name="audio_channel_stereo">Stereo</string>
    <string name="audio_channel_mono">Mono</string>
    <string name="audio_channel_reverse">Reverse</string>
    <string name="audio_effect_balance_center">Center</string>
    <string name="audio_effect_balance_left">L %1$d%%</string>
    <string name="audio_effect_balance_right">R %1$d%%</string>
    <string name="video_setting">Video settings</string>
    <string name="video_effect_compare">Compare</string>
    <string name="video_effect_reset">Reset</string>
    <string name="video_effect_tab_preset">Effects</string>
    <string name="video_effect_tab_adjust">Adjust</string>
    <string name="video_effect_category_boost">Boost</string>
    <string name="video_effect_category_tone">Style</string>
    <string name="video_effect_natural">Natural</string>
    <string name="video_effect_vivid">Vivid</string>
    <string name="video_effect_clear">Clear</string>
    <string name="video_effect_bright">Bright</string>
    <string name="video_effect_cinema">Cinema</string>
    <string name="video_effect_soft">Soft</string>
    <string name="video_effect_warm">Warm</string>
    <string name="video_effect_cool">Cool</string>
    <string name="video_effect_comfort">Comfort</string>
    <string name="video_effect_anime">Anime</string>
    <string name="video_effect_sport">Sport</string>
    <string name="video_effect_game">Game</string>
    <string name="video_effect_custom">Custom</string>
    <string name="video_effect_saturation">Saturation</string>
    <string name="video_effect_contrast">Contrast</string>
    <string name="video_effect_brightness">Brightness</string>
    <string name="video_effect_gamma">Gamma</string>
    <string name="video_effect_hue">Hue</string>
    <string name="video_effect_temperature">Color temperature</string>
    <string name="video_effect_sharpness">Sharpness</string>
    <string name="video_effect_shadow">Shadow lift</string>
    <string name="subtitle_setting">Subtitle settings</string>
    <string name="subtitle_search_api_title">Assrt</string>
    <string name="subtitle_search_token_hint">Token</string>
    <string name="subtitle_reset">Reset</string>
    <string name="subtitle_tab_appearance">Appearance</string>
    <string name="subtitle_tab_adjust">Adjust</string>
    <string name="subtitle_tab_advanced">Advanced</string>
    <string name="subtitle_offset">Subtitle offset</string>
    <string name="subtitle_size">Size</string>
    <string name="subtitle_position">Position</string>
    <string name="subtitle_style_source">Style source</string>
    <string name="subtitle_style_original">Original</string>
    <string name="subtitle_style_system">System</string>
    <string name="subtitle_style_custom">Custom</string>
    <string name="subtitle_system_setting">System caption settings</string>
    <string name="subtitle_text_color">Text color</string>
    <string name="subtitle_text_opacity">Text transparency</string>
    <string name="subtitle_edge_style">Edge style</string>
    <string name="subtitle_edge_none">None</string>
    <string name="subtitle_edge_outline">Outline</string>
    <string name="subtitle_edge_shadow">Shadow</string>
    <string name="subtitle_edge_color">Edge color</string>
    <string name="subtitle_edge_opacity">Edge transparency</string>
    <string name="subtitle_edge_width">Edge width</string>
    <string name="subtitle_shadow_strength">Shadow strength</string>
    <string name="subtitle_background">Background</string>
    <string name="subtitle_background_opacity">Background transparency</string>
    <string name="subtitle_secondary_track">Secondary subtitles</string>
    <string name="subtitle_secondary_off">Off</string>
    <string name="subtitle_secondary_auto">Auto</string>
    <string name="subtitle_secondary_select">Select</string>
    <string name="subtitle_secondary_track_select">Secondary subtitle</string>
    <string name="subtitle_secondary_position">Secondary position</string>
    <string name="subtitle_color_white">White</string>
    <string name="subtitle_color_yellow">Yellow</string>
    <string name="subtitle_color_cyan">Cyan</string>
    <string name="subtitle_color_green">Green</string>
    <string name="subtitle_color_orange">Orange</string>
    <string name="subtitle_color_pink">Pink</string>
    <string name="subtitle_color_red">Red</string>
    <string name="subtitle_color_blue">Blue</string>
    <string name="subtitle_color_black">Black</string>
    <string name="subtitle_color_gray">Gray</string>
    <string name="subtitle_color_transparent">Transparent</string>
    <string name="subtitle_background_dim">Dim black</string>
    <string name="danmaku">Danmaku</string>
    <string name="danmaku_select">Select danmaku</string>
    <string name="danmaku_setting">Danmaku setting</string>
    <string name="danmaku_text_size">Text scale</string>
    <string name="danmaku_transparency">Opacity</string>
    <string name="danmaku_text_bold">Bold</string>
    <string name="danmaku_style_mode">Text style</string>
    <string name="danmaku_style_none">None</string>
    <string name="danmaku_style_shadow">Shadow</string>
    <string name="danmaku_style_stroke">Stroke</string>
    <string name="danmaku_style_projection">Projection</string>
    <string name="danmaku_shadow_transparency">Shadow opacity</string>
    <string name="danmaku_stroke_width">Stroke width</string>
    <string name="danmaku_projection_offset_x">Projection offset X</string>
    <string name="danmaku_projection_offset_y">Projection offset Y</string>
    <string name="danmaku_projection_transparency">Projection opacity</string>
    <string name="danmaku_color_mode">Color mode</string>
    <string name="danmaku_color_default">Default</string>
    <string name="danmaku_color_colorful">Colorful</string>
    <string name="danmaku_color_gradient">Gradient</string>
    <string name="danmaku_color_override_hint">Original colors will be ignored</string>
    <string name="danmaku_auto">Auto</string>
    <string name="danmaku_duration">Scroll duration</string>
    <string name="parse">Parse</string>
    <string name="player_engine">Engine</string>
    <string name="subtitle_style">Style</string>
    <string name="playback_font">Font</string>
</resources>