<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:scrollbars="none">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/episodes"
            style="@style/Control"
            android:text="@string/detail_episode" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/parse"
            style="@style/Control"
            android:text="@string/parse"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/player"
            style="@style/Control"
            android:text="@string/play_exo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/reset"
            style="@style/Control"
            android:text="@string/play_reset" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/replay"
            style="@style/Control"
            android:text="@string/play_replay" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/repeat"
            style="@style/Control"
            android:text="@string/play_repeat" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/speed"
            style="@style/Control"
            android:fontFeatureSettings="tnum"
            android:text="@string/play_speed" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/scale"
            style="@style/Control"
            android:text="@string/play_scale" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text"
            style="@style/Control"
            android:tag="3"
            android:text="@string/play_track_text" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/audio"
            style="@style/Control"
            android:tag="1"
            android:text="@string/play_track_audio" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/video"
            style="@style/Control"
            android:tag="2"
            android:text="@string/play_track_video" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/danmaku"
            style="@style/Control"
            android:text="@string/danmaku"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/edition"
            style="@style/Control"
            android:text="@string/play_edition"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/chapter"
            style="@style/Control"
            android:text="@string/play_chapter"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/opening"
            style="@style/Control"
            android:text="@string/play_op" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ending"
            style="@style/Control"
            android:text="@string/play_ed" />

        <com.fongmi.android.tv.ui.custom.MpvScriptButtonsView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</HorizontalScrollView>
